--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
 	},
 	"homepage": "https://github.com/megxsan/CS546AnimalShelterWebsite/tree/development#readme",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.298.0",
+		"@aws-sdk/lib-storage": "^3.298.0",
 		"bcrypt": "^5.1.0",
 		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-handlebars": "^7.0.7",
 		"express-session": "^1.17.3",
+		"formidable": "^2.1.1",
 		"mongodb": "^5.2.0",
-		"@aws-sdk/client-s3": "^3.298.0",
-		"@aws-sdk/lib-storage": "^3.298.0",
-		"dotenv": "^16.0.3",
-		"formidable": "^2.1.1"
+		"xss": "^1.0.14"
 	}
 }
